Made the email field data binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ android {
     }
 
     // needed for data binding
-    buildFeatures {
-        dataBinding true
+    buildFeatures{
+        dataBinding true;
     }
 }
 
